# qapish

./: .env.example  .gitignore  Cargo.toml  Containerfile  README.md  agents.md  justfile  preview.html
ai/: Cargo.toml
ai/src/: lib.rs
api/: Cargo.toml
api/src/: main.rs
infra/: Cargo.toml
infra/src/: lib.rs
libs/persistence/: Cargo.toml
libs/persistence/migrations/: 0001_init.sql  0002_add_radeon_8060s.sql  0003_update_gmktek_package.sql  0004_enhance_packages.sql  0005_add_depreciation_rules.sql  0006_refactor_provenance_table.sql
libs/persistence/src/: lib.rs
orchestration/quadlet/: qapish-api.container  qapish-postgres.container  qapish.network
script/: demo.sh  dev.sh  make-favicon.sh  podman-db.sh  setup-db.sh
web/: Cargo.toml  Trunk.toml  index.html
web/public/: robots.txt  site.webmanifest  sitemap.xml
web/src/: lib.rs
web/style/: README.md  leptonic.scss
web/style/components/: buttons.scss  landing.scss  package-detail.scss  packages.scss
