[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
ai = { path = "../ai" }
infra = { path = "../infra" }
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dotenv = "0.15"
uuid.workspace = true
