[package]
name = "qapish-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = "0.6"
leptos_router = { version = "0.6", features = ["csr"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
gloo-net = "0.6"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
